--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -1,6 +1,34 @@
 % This file was created with JabRef 2.8.
 % Encoding: ISO8859_1
 
+@ARTICLE{born2009terahertz,
+  author = {Born, Benjamin and Kim, Seung Joong and Ebbinghaus, Simon and Gruebele,
+	Martin and Havenith, Martina},
+  title = {The terahertz dance of water with the proteins: the effect of protein
+	flexibility on the dynamical hydration shell of ubiquitin},
+  journal = {Faraday discussions},
+  year = {2009},
+  volume = {141},
+  pages = {161--173},
+  file = {born2009terahertz.pdf:born2009terahertz.pdf:PDF},
+  publisher = {Royal Society of Chemistry},
+  timestamp = {2014.01.17}
+}
+
+@ARTICLE{plusquellic2007applications,
+  author = {Plusquellic, David F and Siegrist, Karen and Heilweil, Edwin J and
+	Esenturk, Okan},
+  title = {Applications of terahertz spectroscopy in biosystems},
+  journal = {ChemPhysChem},
+  year = {2007},
+  volume = {8},
+  pages = {2412--2431},
+  number = {17},
+  file = {plusquellic2007applications.pdf:plusquellic2007applications.pdf:PDF},
+  publisher = {Wiley Online Library},
+  timestamp = {2014.01.17}
+}
+
 @ARTICLE{mackerell2004extending,
   author = {MacKerell, Alexander D and Feig, Michael and Brooks, Charles L},
   title = {Extending the treatment of backbone energetics in protein force fields:
